Fix x overflow

--- a/stylesheets/index.scss
+++ b/stylesheets/index.scss
@@ -19,6 +19,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: $font-normal;
+    overflow-x: hidden;
 }
 
 .title {
